<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".SecondActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".SecondActivity">

            <TextView
                android:id="@+id/msgWelcome"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mainht"
                android:gravity="center"
                android:text="@string/msgWlcm"
                android:textColor="@color/black"
                android:textSize="@dimen/txtsize2" />

            <TextView
                android:id="@+id/msgNote"
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:layout_margin="20dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/msgNote"
                android:textSize="@dimen/noteSize" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_weight="1"
                        android:text="@string/enterName"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/enterName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:layout_weight="2"
                        android:hint="@string/enterName"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_weight="1"
                        android:text="@string/enterEmail"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/enterEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:layout_weight="2"
                        android:hint="@string/enterEmail"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_weight="1"
                        android:text="@string/enterDOB"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/enterDOB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:layout_weight="2"
                        android:hint="@string/hintDOB"
                        android:inputType="date"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_weight="1"
                        android:text="@string/enterPhone"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/enterPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:layout_weight="2"
                        android:hint="@string/enterPhone"
                        android:inputType="number"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_weight="1"
                        android:text="@string/enterCity"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/enterCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:layout_weight="2"
                        android:hint="@string/enterCity"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_weight="1"
                        android:text="@string/enterPin"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/enterPin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:layout_weight="2"
                        android:hint="@string/enterPin"
                        android:inputType="number"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginTop="13dp"
                        android:layout_weight="1"
                        android:text="@string/pickGender"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <RadioGroup
                        android:id="@+id/radiogrp"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:weightSum="3">

                        <RadioButton
                            android:id="@+id/gMale"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/gMale"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/gFemale"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/gFemale"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/gOther"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/gOther"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </RadioGroup>
                </TableRow>
            </TableLayout>

            <EditText
                android:id="@+id/txtOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:hint="@string/enterOther"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black" />

            <CheckBox
                android:id="@+id/terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margins"
                android:gravity="fill_vertical"
                android:text="@string/checkTerms" />

            <Button
                android:id="@+id/btnSubmit2"
                android:layout_width="150dp"
                android:layout_height="@dimen/mainht"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margins"
                android:gravity="center"
                android:text="@string/btnSubmit"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</layout>